--- a/Git/.gitignore
+++ b/Git/.gitignore
@@ -1,12 +1,28 @@
-﻿################################################################################
-# Este arquivo .gitignore foi criado automaticamente pelo Microsoft(R) Visual Studio.
-################################################################################
+﻿# ======== Build ========
+bin/
+obj/
+*.dll
+*.exe
+*.pdb
+*.cache
+*.log
 
+# ======== Visual Studio ========
 .vs/
 *.suo
 *.user
 *.userosscache
 *.sln.docstates
-bin/
-obj/
 
+# ======== Pacotes / Dependências ========
+packages/
+*.nupkg
+
+# ======== Configurações temporárias ========
+*.tmp
+*.bak
+*.swp
+
+# ======== Outros ========
+_ReSharper*/
+*.DotSettings.user
