--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,28 @@
-﻿################################################################################
-# Este arquivo .gitignore foi criado automaticamente pelo Microsoft(R) Visual Studio.
-################################################################################
+﻿# ======== Build ========
+bin/
+obj/
+*.dll
+*.exe
+*.pdb
+*.cache
+*.log
 
-/.vs
+# ======== Visual Studio ========
+.vs/
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+# ======== Pacotes / Dependências ========
+packages/
+*.nupkg
+
+# ======== Configurações temporárias ========
+*.tmp
+*.bak
+*.swp
+
+# ======== Outros ========
+_ReSharper*/
+*.DotSettings.user
